[metadata]
name = exlo
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/exlo
description = Log usage of equipment for scientific experiments with json files.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = logger, json, data, scientific, european, project
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    python-dateutil
    tzlocal < 3.0
    importlib-metadata
setup_requires =
    setuptools_scm
python_requires =
    >=3.7
